Render test with updated paths.
